@@ -1,0 +1,7 @@
+Source: blah
+Architecture: any
+Build-Depends: golang-go
+
+Package: blah
+Description: blah
+ blah
