@@ -3,6 +3,8 @@ lintian-brush (0.27) UNRELEASED; urgency=medium
   * Add fixer for package-contains-linda-overrides.
   * Add fixer for excessive-priority-for-library-package.
   * Add fixer for debian-rules-sets-dpkg-architecture-variable.
+  * Add fixers for missing-built-using-field-for-golang-package and
+    built-using-field-on-arch-all-package.
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 31 Aug 2019 12:25:59 +0000
 
